--- a/es6/package.json
+++ b/es6/package.json
@@ -1,12 +1,16 @@
 {
   "name": "es6",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "jquery-3.4.1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  }
 }
